validaciones obligaciones de pago por Id y por rango de años

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_ProcesoMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_ProcesoMigracion.cshtml
@@ -21,8 +21,8 @@
                 </div>
             </div>
         </div>
-        <div class="card text-center">
-            <div id="result-message" class="container-fluid">
+        <div class="card text-center" id="result-message">
+            <div class="container-fluid">
                 <div class="card-body">
                     <h5 class="card-title">Seleccione una opción del proceso</h5>
                 </div>
@@ -45,6 +45,7 @@
             showCancelButton: true,
             confirmButtonColor: '#ff830f',
             cancelButtonColor: '#3c3c3c',
+            cancelButtonText: 'Cancelar',
             confirmButtonText: 'Sí, copiar datos.'
         }).then((result) => {
             if (result.isConfirmed) {
@@ -68,53 +69,80 @@
                         $('#result-message').show();
                     }
                 })
-                                            }
+            }
         });
     });
 
 
     $('#btn-validate').on('click', function () {
-        $.ajax({
-            url: '@Url.Action("ValidarRegistros", "ConceptoPago", new { area = "" })' + '?procedencia=' + '@procedencia',
-            type: 'POST',
-            cache: false,
-            beforeSend: function () {
-                $('#processing').show();
-                $('#result-message').hide();
-            },
-            success: function (data) {
-                $('#result-message').html(data);
-            },
-            error: function (jqXHR, textStatus, errorThrown) {
-                $('#alert-message p.alert').html(jqXHR.responseText)
-                $('#result-message').show();
-            },
-            complete: function () {
-                $('#processing').hide();
-                $('#result-message').show();
+        Swal.fire({
+            title: 'Validar Conceptos de pago del temporal de pagos',
+            text: 'Al aceptar se procederá con la validación de consistencia de los conceptos de pago ' +
+                'del sistema temporal de pagos con la base de datos de recaudacion de ingresos.',
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#ff830f',
+            cancelButtonColor: '#3c3c3c',
+            cancelButtonText: 'Cancelar',
+            confirmButtonText: 'Iniciar validación'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                $.ajax({
+                    url: '@Url.Action("ValidarRegistros", "ConceptoPago", new { area = "" })' + '?procedencia=' + '@procedencia',
+                    type: 'POST',
+                    cache: false,
+                    beforeSend: function () {
+                        $('#processing').show();
+                        $('#result-message').hide();
+                    },
+                    success: function (data) {
+                        $('#result-message').html(data);
+                    },
+                    error: function (jqXHR, textStatus, errorThrown) {
+                        $('#alert-message p.alert').html(jqXHR.responseText)
+                        $('#result-message').show();
+                    },
+                    complete: function () {
+                        $('#processing').hide();
+                        $('#result-message').show();
+                    }
+                })
             }
         })
     })
 
     $('#btn-migrate').on('click', function () {
-        $.ajax({
-            url: '@Url.Action("MigrarDatosTemporalPagos", "ConceptoPago", new { area = "" })' + '?procedencia=' + '@procedencia',
-            type: 'POST',
-            cache: false,
-            beforeSend: function () {
-                $('#processing').show();
-                $('#result-message').hide();
-            },
-            success: function (data) {
-                $('#result-message').html(data);
-            },
-            error: function (jqXHR, textStatus, errorThrown) {
-                $('#alert-message p.alert').html(jqXHR.responseText)
-                $('#result-message').show();
-            },
-            complete: function () {
-                $('#processing').hide();
-                $('#result-message').show();
+        Swal.fire({
+            title: 'Migrar Conceptos de pago desde el temporal de pagos',
+            text: 'Al aceptar los registros con correctamente validados serán copiados a la base de Recaudación de ingresos.',
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#ff830f',
+            cancelButtonColor: '#3c3c3c',
+            cancelButtonText: 'Cancelar',
+            confirmButtonText: 'Sí, migrar datos.'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                $.ajax({
+                    url: '@Url.Action("MigrarDatosTemporalPagos", "ConceptoPago", new { area = "" })' + '?procedencia=' + '@procedencia',
+                    type: 'POST',
+                    cache: false,
+                    beforeSend: function () {
+                        $('#processing').show();
+                        $('#result-message').hide();
+                    },
+                    success: function (data) {
+                        $('#result-message').html(data);
+                    },
+                    error: function (jqXHR, textStatus, errorThrown) {
+                        $('#alert-message p.alert').html(jqXHR.responseText)
+                        $('#result-message').show();
+                    },
+                    complete: function () {
+                        $('#processing').hide();
+                        $('#result-message').show();
+                    }
+                })
             }
         })
     })
