add button for save and enable form fields

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_OtrasTablas.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_OtrasTablas.cshtml
@@ -50,7 +50,7 @@
             @foreach (var item in Model.Obligaciones)
             {
                 <tr>
-                    <td>@item.Cuota_pago - @item.Descripcio</td>
+                    <td>@item.Cuota_pago - @item.Cuota_pago_desc</td>
                     <td>@item.Ano</td>
                     <td>@item.P</td>
                 </tr>
