--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_EditarObligacion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_EditarObligacion.cshtml
@@ -5,6 +5,7 @@
 @{
     string tipoObs = ViewBag.TipoObserv;
     string observ_descrip = ViewBag.Observacion;
+    string component_id = ViewBag.ComponentId;
 }
 <div class="col-12">
     <div class="row">
@@ -71,6 +72,20 @@
                         @Html.CheckBoxFor(model => model.Pagado, new { @data_toggle = "toggle", @data_on = "SI", @data_off = "NO", @data_onstyle = "info", @data_offstyle = "secondary", @data_size = "sm", @disabled = "true" })
                     </div>
                 </div>
+
+                <br />
+                <div class="col-md-12" style="display:none" id="loading">
+
+                    <h6>Actualizando los datos...</h6>
+
+                    <div class="progress">
+                        <div class="indeterminate"></div>
+                    </div>
+                </div>
+                <div class="d-inline my-3" style="display:none;">
+                    <a id="btnCancel" href="javascript:;" class="btn btn-outline-secondary float-left"><i class="fa fa-arrow-circle-left"></i>&nbsp;Atrás</a>
+                    <button type="submit" class="btn btn-primary float-right" id="btnsubmit"><i class="fa fa-save"></i>&nbsp;Guardar</button>
+                </div>
             }
         </div>
     </div>
@@ -82,6 +97,12 @@
 <script>
     $('#error_title').hide();
     $('#error_descrip').html('@observ_descrip');
+
+    $('@component_id').removeAttr('readonly');
+
+    if ('@component_id' !== '') {
+        
+    }
 
     $("#btnsubmit").on('click', function (event) {
         event.preventDefault();
