--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_EditarObligacion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_EditarObligacion.cshtml
@@ -106,9 +106,9 @@
 
     $("#btnsubmit").on('click', function (event) {
         event.preventDefault();
-        var form = $('#form_cpdes');
+        var form = $('#form_ec_obl');
         Swal.fire({
-            title: "¡Atención, posible incosistencia!",
+            title: "Esta acción modificará los valores de la obligacíon",
             text: "",
             type: "warning",
             showCancelButton: true,
