--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_ProcesoMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_ProcesoMigracion.cshtml
@@ -7,9 +7,11 @@
     <div class="col-md-4 py-1"><button id="btn-copy" class="btn btn-warning btn-block">1. Copiar datos desde Temporal de pagos</button></div>
     <div class="col-md-4 py-1"><button id="btn-validate" class="btn btn-info btn-block">2. Validar consistencia de datos</button></div>
     <div class="col-md-4 py-1"><button id="btn-migrate" class="btn btn-primary btn-block">3. Migrar a Recaudacion de ingresos</button></div>
+</div>
 
-    <div class="col-md-12 my-4">
-        <div class="jumbotron" style="min-height: 450px">
+<div class="col-md-12 my-4">
+    <div class="row jumbotron" style="min-height: 450px">
+        <div class="card text-center w-100">
             <div id="processing" class="container-fluid" style="display:none;">
                 <div class="d-flex justify-content-center">
                     <div class="spinner-border text-info" role="status" style="width: 5rem; height: 5rem;">
@@ -20,11 +22,9 @@
                     </div>
                 </div>
             </div>
-            <div class="card text-center" id="result-message">
-                <div class="container-fluid">
-                    <div class="card-body">
-                        <h5 class="card-title">Seleccione una opción del proceso</h5>
-                    </div>
+            <div id="result-message" class="container-fluid">
+                <div class="card-body">
+                    <h5 class="card-title">Seleccione una opción del proceso</h5>
                 </div>
             </div>
         </div>
