--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_DatosMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_DatosMigracion.cshtml
@@ -24,9 +24,12 @@
         columns.Add(c => c.C_CodAlu).Titled("Codigo").Filterable(true);
         columns.Add(c => c.C_RcCod).Titled("Cod RC").Filterable(true);
         columns.Add(c => c.T_ApePaterno).Titled("Apellido paterno").Filterable(true);
-        columns.Add(c => c.T_ApeMaterno).Titled("Apellido nombre").Filterable(true);
+        columns.Add(c => c.T_ApeMaterno).Titled("Apellido materno").Filterable(true);
         columns.Add(c => c.T_Nombre).Titled("Nombre").Filterable(true);
         columns.Add(c => c.C_NumDNI).Titled("Num. Doc.").Filterable(true);
+        columns.Add(c => c.B_ExistsDestino).Css("text-center").Encoded(false).Sanitized(false)
+               .RenderValueAs(model => model.B_ExistsDestino ? Html.Raw("<i class=\"fa fa-check-circle text-success\"></i>"): Html.Raw("<i class=\"fa fa-times-circle text-danger\"></i>"))
+               .Titled("Unfv Repo").Filterable(true);
         columns.Add(c => c.B_Migrable).Css("text-center").Encoded(false).Sanitized(false)
                .RenderValueAs(model => model.B_Migrable? Html.Raw("<i class=\"fa fa-check-circle text-success\"></i>"): Html.Raw("<i class=\"fa fa-times-circle text-danger\"></i>"))
                .Titled("Migrable").Filterable(true);
@@ -34,8 +37,7 @@
                .RenderValueAs(model => model.B_Migrado ? Html.Raw("<i class=\"fa fa-check-circle text-success\"></i>") : Html.Raw("<i class=\"fa fa-times-circle text-danger\"></i>"))
                .Titled("Migrado").Filterable(true);
         columns.Add().SetWidth(100).Css("text-right").Encoded(false).Sanitized(false)
-               .RenderValueAs(model => Html.Raw($"<a href=\"{ Url.Action("VerDatos", "Estudiante", new { id = model.I_RowID, area = "" })}\" class=\"modal-link\"><i class=\"fa fa-id-card\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Ver</span></a>"));
-
+               .RenderValueAs(model => Html.Raw($"<a href=\"{ Url.Action("VerDatos", "Estudiante", new { id = model.I_RowID, area = "" })}\" class=\"modal-link-lg\"><i class=\"fa fa-id-card\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Ver</span></a>"));
         columns.Add().Css("text-right").Encoded(false).Sanitized(false)
                      .RenderValueAs(model => model.B_Migrable ?
                                             Html.Raw("")
