--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_ProcesoMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_ProcesoMigracion.cshtml
@@ -10,27 +10,23 @@
 </div>
 
 <div class="col-md-12 my-4">
-    <div class="jumbotron" style="min-height: 450px">
-        <div class="card text-center" id="result-periodos" style="display:none;">
-            <div class="container-fluid" style="display:none;">
-                <div class="card-body">
-                </div>
-            </div>
-        </div>
-        <div class="card text-center" id="result-message">
-            <div class="container-fluid">
-                <div class="card-body">
-                    <h5 class="card-title">Seleccione una opción del proceso</h5>
-                </div>
-            </div>
-        </div>
-        <div id="processing" class="container-fluid" style="display:none;">
-            <div class="d-flex justify-content-center">
-                <div class="spinner-border text-info" role="status" style="width: 5rem; height: 5rem;">
-                    <span class="sr-only" id="sr-message"></span>
-                </div>
+    <div class="row jumbotron" style="min-height: 450px">
+        <div class="card text-center w-100" id="result-periodos" style="display:none;">
+            <div id="processing" class="container-fluid" style="display:none;">
                 <div class="d-flex justify-content-center">
-                    <span id="load-message" class="h5 mt-4"></span>
+                    <div class="spinner-border text-info" role="status" style="width: 5rem; height: 5rem;">
+                        <span class="sr-only" id="sr-message"></span>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <span id="load-message" class="h5 mt-4"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="card text-center" id="result-message">
+                <div class="container-fluid">
+                    <div class="card-body">
+                        <h5 class="card-title">Seleccione una opción del proceso</h5>
+                    </div>
                 </div>
             </div>
         </div>
