--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoMigrarRegistros.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoMigrarRegistros.cshtml
@@ -1,7 +1,11 @@
-﻿@model WebMigradorCtasPorCobrar.Models.Helpers.Response
+﻿@model IEnumerable<WebMigradorCtasPorCobrar.Models.Helpers.Response>
 
+@foreach (var result in Model)
+{
+    <div class="card-body">
+        <h5 class="card-title">Resultado: @result.CurrentID</h5>
+        <div class="card-text alert alert-@result.Color">@Html.Raw(result.Message)</div>
+    </div>
 
-<div class="card-body">
-    <h5 class="card-title">Resultado:</h5>
-    <div class="card-text alert alert-@Model.Color">@Html.Raw(Model.Message)</div>
-</div>
+}
+
