--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoValidarRegistros.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoValidarRegistros.cshtml
@@ -1,7 +1,9 @@
-﻿@model WebMigradorCtasPorCobrar.Models.Helpers.Response
+﻿@model IEnumerable<WebMigradorCtasPorCobrar.Models.Helpers.Response>
 
-
-<div class="card-body">
-    <h5 class="card-title">Resultado:</h5>
-    <div class="card-text alert alert-@Model.Color">@Html.Raw(Model.Message)</div>
-</div>
+@foreach (var response in Model)
+{
+    <div class="card-body">
+        <h5 class="card-title">Resultado: @response.CurrentID</h5>
+        <div class="card-text alert alert-@response.Color">@Html.Raw(response.Message)</div>
+    </div>
+}
